--- a/src/global.scss
+++ b/src/global.scss
@@ -44,7 +44,11 @@
  * Global customized rules
  */
 
- .custom-item {
+ion-modal ion-title {
+  text-align: center;
+}
+
+.custom-item {
   --background: #f7f7f7; /* Fondo personalizado */
 }
 
