feat(teacher-dashboard): save selected group to Firestore

--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -134,3 +134,12 @@
     </ion-content>
   </ng-template>
 </ion-modal>
+
+<ion-toast
+ cssClass="page__toast"
+ [message]="toastMessage"
+ [isOpen]="isToastOpen"
+ [duration]="5000"
+ (didDismiss)="isToastOpen = false"
+>
+</ion-toast>
