--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -10,24 +10,26 @@
 <ion-content>
   <ion-list>
 
-    <ion-item-sliding class="sliding-item-card" #groupSlidingItem>
-      <ion-item class="custom-item">
-        <ion-label>
-          <h2>Grupo 1° "A"</h2>
-        </ion-label>
-        <ion-chip>23</ion-chip>
-      </ion-item>
-      <ion-item-options side="end">
-        <ion-item-option id="add-student.1a" color="primary">
-          <ion-icon slot="icon-only" name="person-add"></ion-icon>
-        </ion-item-option>
-        <ion-item-option id="delete-group.1a" color="danger">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+    @for(group of studentGroups; track group.gid) {
+      <ion-item-sliding class="sliding-item-card" #groupSlidingItem>
+        <ion-item class="custom-item">
+          <ion-label>
+            <h2>Grupo {{ group.grado }}° "{{ group.letra }}"</h2>
+          </ion-label>
+          <ion-chip>{{ group.alumnos.length }}</ion-chip>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option id="add-{{ group.gid }}" color="primary">
+            <ion-icon slot="icon-only" name="person-add"></ion-icon>
+          </ion-item-option>
+          <ion-item-option id="delete-{{ group.gid }}" color="danger">
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    }
 
-    <ion-item-sliding class="sliding-item-card" #groupSlidingItem>
+    <!-- <ion-item-sliding class="sliding-item-card" #groupSlidingItem>
       <ion-item class="custom-item">
         <ion-label>
           <h2>Grupo 1° "B"</h2>
@@ -76,7 +78,7 @@
           <ion-icon slot="icon-only" name="trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
-    </ion-item-sliding>
+    </ion-item-sliding> -->
 
   </ion-list>
 </ion-content>
