--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -24,59 +24,17 @@
       </ion-accordion>
     -->
 
-    <ion-accordion value="1A" toggleIconSlot="start">
+  @for(group of studentGroups; track group.gid) {
+    <ion-accordion value="{{ group.grado }}{{ group.letra }}" toggleIconSlot="start">
       <ion-item slot="header" color="light">
-        <ion-label>Grupo 1° "A"</ion-label>
+        <ion-label>Grupo {{ group.grado }}° "{{ group.letra }}"</ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         No hay alumnos en este grupo.
       </div>
     </ion-accordion>
+  }
 
-    <ion-accordion value="1B" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo 1° "B"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
-
-    <ion-accordion value="2A" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo 2° "A"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
-
-    <ion-accordion value="2B" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo 2° "B"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
-
-    <ion-accordion value="3A" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo 3° "A"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
-
-    <ion-accordion value="3B" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo 3° "B"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
 
   </ion-accordion-group>
 </ion-content>
