--- a/src/app/teacher/tab-students/tab-students.component.html
+++ b/src/app/teacher/tab-students/tab-students.component.html
@@ -16,18 +16,77 @@
   </ion-fab-button>
 </ion-fab>
 
+<!-- Modal (Nuevo Estudiante) -->
 <ion-modal
  trigger="add-student-btn"
-  [initialBreakpoint]="initialBreakpoint"
-  [breakpoints]="breakpoints"
-  #addStudentModal
+ [initialBreakpoint]="initialBreakpoint"
+ [breakpoints]="breakpoints"
+ (willDismiss) = "closeModal('add-student-btn')"
+ #addStudentModal
 >
   <ng-template>
+
     <ion-header>
-
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button
+           (click)="closeModal('add-student-btn')"
+          >
+            Cancelar
+          </ion-button>
+        </ion-buttons>
+        <ion-title>Nuevo Estudiante</ion-title>
+        <ion-buttons slot="end">
+          <ion-button
+           [disabled]="!form.valid"
+           [strong]="true"
+           (click) = "onAddStudent()"
+          >
+            Guardar
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
     </ion-header>
-    <ion-content>
 
+    <ion-content class="ion-padding" color="light">
+      <form [formGroup]="form">
+        <ion-list-header>
+          Nombre
+        </ion-list-header>
+        <ion-note>
+          Escribe el nombre completo del estudiante.
+        </ion-note>
+        <ion-list [inset]="true">
+          <ion-item>
+            <ion-input
+              formControlName="nombre"
+              label="Nombre(s):"
+              labelPlacement="floating"
+              placeholder="Escribe aquí..."
+            >
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input
+              formControlName="apellidoPaterno"
+              label="Apellido Paterno:"
+              labelPlacement="floating"
+              placeholder="Escribe aquí..."
+            >
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input
+              formControlName="apellidoMaterno"
+              label="Apellido Materno:"
+              labelPlacement="floating"
+              placeholder="Escribe aquí..."
+            >
+            </ion-input>
+          </ion-item>
+        </ion-list>
+      </form>
     </ion-content>
+
   </ng-template>
 </ion-modal>
