--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -8,8 +8,22 @@
 </ion-header>
 
 <ion-content>
-   <ion-accordion-group expand="inset">
-
+  @if(studentGroups.length === 0 && !isLoading) {
+    <div class="center-box">
+      <p>Para crear notificaciones primero debes registrar a los alumnos y grupos de tu Centro de Trabajo.</p>
+    </div>
+  }
+  <ion-accordion-group expand="inset">
+    @for(group of studentGroups; track group.gid) {
+      <ion-accordion value="{{ group.grado }}{{ group.letra }}" toggleIconSlot="start">
+        <ion-item slot="header" color="light">
+          <ion-label>Grupo {{ group.grado }}° "{{ group.letra }}"</ion-label>
+        </ion-item>
+        <div class="ion-padding" slot="content">
+          No hay alumnos en este grupo.
+        </div>
+      </ion-accordion>
+    }
     <!--
       <ion-accordion value="1A" toggleIconSlot="start">
         <ion-item slot="header" color="light">
@@ -23,18 +37,5 @@
         </div>
       </ion-accordion>
     -->
-
-  @for(group of studentGroups; track group.gid) {
-    <ion-accordion value="{{ group.grado }}{{ group.letra }}" toggleIconSlot="start">
-      <ion-item slot="header" color="light">
-        <ion-label>Grupo {{ group.grado }}° "{{ group.letra }}"</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        No hay alumnos en este grupo.
-      </div>
-    </ion-accordion>
-  }
-
-
   </ion-accordion-group>
 </ion-content>
