--- a/src/app/teacher/tab-students/tab-students.component.html
+++ b/src/app/teacher/tab-students/tab-students.component.html
@@ -7,9 +7,128 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-</ion-content>
+@if(isSpinnerActive) {
+  <div class="container__spinner">
+    <ion-spinner color="primary"></ion-spinner>
+    <p>{{ spinnerText }}</p>
+  </div>
+}
 
+@if(!isSpinnerActive) {
+  <ion-content>
+    @if(filteredStudents.length === 0 && !isLoading) {
+      <div class="center-box">
+        <p>No hay alumnos registrados todavía.</p>
+      </div>
+    }
+    <ion-list>
+    @for(filteredStudent of filteredStudents; track filteredStudent.id) {
+      <ion-item-sliding class="sliding-item-card" #studentSlidingItem>
+        <ion-item class="custom-item">
+          <ion-label>
+            <h2>{{ filteredStudent.nombreCompleto }}</h2>
+          </ion-label>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option
+            id="update-{{ filteredStudent.id }}"
+          >
+            <ion-icon slot="icon-only" name="create"></ion-icon>
+          </ion-item-option>
+          <ion-item-option
+            color="danger"
+            id="delete-{{ filteredStudent.id }}"
+          >
+            <ion-icon slot="icon-only" name="trash"></ion-icon>
+          </ion-item-option>
+          <ion-action-sheet
+            trigger="delete-{{ filteredStudent.id }}"
+            header="Estás a punto de eliminar"
+            subHeader='a {{ filteredStudent.nombreCompleto }}. Con esta acción se perderán todos los datos del alumno.'
+            [buttons]="actionSheetButtons"
+            (didDismiss)="onDeleteStudent($event, studentSlidingItem, filteredStudent)"
+          >
+          </ion-action-sheet>
+        </ion-item-options>
+      </ion-item-sliding>
+      <!-- Modal (Actualizar Estudiante) -->
+      <ion-modal
+       trigger="update-{{ filteredStudent.id }}"
+       [initialBreakpoint]="initialBreakpoint"
+       [breakpoints]="breakpoints"
+       (didDismiss)="onModalDismiss(studentSlidingItem)"
+       (willPresent)="loadStudentData(filteredStudent)"
+       #updateStudentModal
+      >
+        <ng-template>
+          <ion-header>
+            <ion-toolbar>
+              <ion-buttons slot="start">
+                <ion-button
+                (click)="closeModal('update-'+filteredStudent.id)"
+                >
+                  Cancelar
+                </ion-button>
+              </ion-buttons>
+              <ion-title>Actualizar</ion-title>
+              <ion-buttons slot="end">
+                <ion-button
+                [disabled]="isSameStudentData() || !form.valid || isSaving"
+                [strong]="true"
+                (click) = "onUpdateStudent(filteredStudent)"
+                >
+                  Guardar
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ion-header>
+          <ion-content class="ion-padding" color="light">
+            <form [formGroup]="form">
+              <ion-list-header>
+                Nombre
+              </ion-list-header>
+              <ion-note>
+                Corrige el nombre o apellidos del estudiante.
+              </ion-note>
+              <ion-list [inset]="true">
+                <ion-item>
+                  <ion-input
+                    formControlName="nombre"
+                    label="Nombre(s):"
+                    labelPlacement="floating"
+                    placeholder="Escribe aquí..."
+                  >
+                  </ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-input
+                    formControlName="apellidoPaterno"
+                    label="Apellido Paterno:"
+                    labelPlacement="floating"
+                    placeholder="Escribe aquí..."
+                  >
+                  </ion-input>
+                </ion-item>
+                <ion-item>
+                  <ion-input
+                    formControlName="apellidoMaterno"
+                    label="Apellido Materno:"
+                    labelPlacement="floating"
+                    placeholder="Escribe aquí..."
+                  >
+                  </ion-input>
+                </ion-item>
+              </ion-list>
+            </form>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+    }
+    </ion-list>
+  </ion-content>
+}
+
+<!-- Botón (Agregar estudiante) -->
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button size="small" id="add-student-btn">
     <ion-icon name="add"></ion-icon>
@@ -21,11 +140,9 @@
  trigger="add-student-btn"
  [initialBreakpoint]="initialBreakpoint"
  [breakpoints]="breakpoints"
- (willDismiss) = "closeModal('add-student-btn')"
  #addStudentModal
 >
   <ng-template>
-
     <ion-header>
       <ion-toolbar>
         <ion-buttons slot="start">
@@ -35,10 +152,10 @@
             Cancelar
           </ion-button>
         </ion-buttons>
-        <ion-title>Nuevo Estudiante</ion-title>
+        <ion-title>Nuevo</ion-title>
         <ion-buttons slot="end">
           <ion-button
-           [disabled]="!form.valid"
+           [disabled]="!form.valid || isSaving"
            [strong]="true"
            (click) = "onAddStudent()"
           >
@@ -47,7 +164,6 @@
         </ion-buttons>
       </ion-toolbar>
     </ion-header>
-
     <ion-content class="ion-padding" color="light">
       <form [formGroup]="form">
         <ion-list-header>
@@ -87,6 +203,14 @@
         </ion-list>
       </form>
     </ion-content>
-
   </ng-template>
 </ion-modal>
+
+<ion-toast
+ cssClass="page__toast"
+ [message]="toastMessage"
+ [isOpen]="isToastOpen"
+ [duration]="5000"
+ (didDismiss)="isToastOpen = false"
+>
+</ion-toast>
