--- a/src/global.scss
+++ b/src/global.scss
@@ -48,6 +48,19 @@ ion-modal ion-title {
   text-align: center;
 }
 
+.center-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.center-box p {
+  color: cornflowerblue;
+  margin: 0 2rem;
+  text-align: center;
+}
+
 .container__spinner {
   display: flex;
   flex-direction: column;
