feat(teacher-dashboard): add logout button

--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -4,6 +4,11 @@
     @if(isLoading) {
       <ion-progress-bar type="indeterminate" color="warning"></ion-progress-bar>
     }
+    <ion-buttons slot="end">
+      <ion-button id="open-action-sheet">
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -121,6 +126,15 @@
     </ion-content>
   </ng-template>
 </ion-modal>
+
+<ion-action-sheet
+ trigger="open-action-sheet"
+ header="Estás a punto de cerrar sesión"
+ subHeader="¿Deseas continuar?"
+ [buttons]="logoutActionSheetButtons"
+ (didDismiss)="onLogout($event)"
+>
+</ion-action-sheet>
 
 <ion-toast
  cssClass="page__toast"
