--- a/src/global.scss
+++ b/src/global.scss
@@ -44,6 +44,11 @@
  * Global customized rules
  */
 
+ion-chip {
+  --background: #f6e338;
+  --color: #222d3a;
+}
+
 ion-modal ion-title {
   text-align: center;
 }
