--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -19,23 +19,64 @@
         <ion-item slot="header" color="light">
           <ion-label>Grupo {{ group.grado }}° "{{ group.letra }}"</ion-label>
         </ion-item>
-        <div class="ion-padding" slot="content">
-          No hay alumnos en este grupo.
+        <div slot="content">
+          @if (studentsListByGroup(group.gid).length === 0) {
+            <ion-label>
+              <p>No hay alumnos en este grupo.</p>
+            </ion-label>
+          }
+          @else {
+            @for(student of studentsListByGroup(group.gid); track student.id) {
+              <ion-item-sliding>
+                <ion-item>
+                  <ion-label>
+                    <h2>{{ student.nombreCompleto }}</h2>
+                  </ion-label>
+                </ion-item>
+                <ion-item-options side="end">
+                  <ion-item-option
+                   color="tertiary"
+                   id="absence-{{ student.id }}"
+                  >
+                    <ion-icon slot="icon-only" name="calendar-number"></ion-icon>
+                  </ion-item-option>
+                  <ion-item-option
+                   color="primary"
+                   id="homework-{{ student.id }}"
+                  >
+                    <ion-icon slot="icon-only" name="book"></ion-icon>
+                  </ion-item-option>
+                  <ion-item-option
+                   color="secondary"
+                   id="misconduct-{{ student.id }}"
+                  >
+                    <ion-icon slot="icon-only" name="sad"></ion-icon>
+                  </ion-item-option>
+                </ion-item-options>
+              </ion-item-sliding>
+            }
+          }
         </div>
       </ion-accordion>
     }
-    <!--
-      <ion-accordion value="1A" toggleIconSlot="start">
-        <ion-item slot="header" color="light">
-          <ion-label>Grupo 1° "A"</ion-label>
-          <ion-button shape="round" (click)="onAddStudent($event)">
-            <ion-icon slot="icon-only" name="person-add"></ion-icon>
-          </ion-button>
-        </ion-item>
-        <div class="ion-padding" slot="content">
-          No hay alumnos en este grupo.
-        </div>
-      </ion-accordion>
-    -->
   </ion-accordion-group>
 </ion-content>
+
+
+
+
+
+
+<!--
+  <ion-accordion value="1A" toggleIconSlot="start">
+    <ion-item slot="header" color="light">
+      <ion-label>Grupo 1° "A"</ion-label>
+      <ion-button shape="round" (click)="onAddStudent($event)">
+        <ion-icon slot="icon-only" name="person-add"></ion-icon>
+      </ion-button>
+    </ion-item>
+    <div class="ion-padding" slot="content">
+      No hay alumnos en este grupo.
+    </div>
+  </ion-accordion>
+-->
