feat(teacher-dashboard): add datetime picker to add absence modal

--- a/src/app/teacher/tab-groups/tab-groups.component.html
+++ b/src/app/teacher/tab-groups/tab-groups.component.html
@@ -215,7 +215,7 @@
           <ion-button
            (click)="addGroupModal.dismiss(null, 'cancel')"
           >
-            Cerrar
+            Cancelar
           </ion-button>
         </ion-buttons>
         <ion-title>Grupo</ion-title>
