--- a/src/app/teacher/tab-notifications/tab-notifications.component.html
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.html
@@ -27,7 +27,7 @@
           }
           @else {
             @for(student of studentsListByGroup(group.gid); track student.id) {
-              <ion-item-sliding>
+              <ion-item-sliding #studentSlidingItem>
                 <ion-item>
                   <ion-label>
                     <h2>{{ student.nombreCompleto }}</h2>
@@ -42,7 +42,7 @@
                   </ion-item-option>
                   <ion-item-option
                    color="primary"
-                   id="homework-{{ student.id }}"
+                   id="noncompliance-{{ student.id }}"
                   >
                     <ion-icon slot="icon-only" name="book"></ion-icon>
                   </ion-item-option>
@@ -60,13 +60,16 @@
                trigger="absence-{{ student.id }}"
                [initialBreakpoint]="initialBreakpoint"
                [breakpoints]="breakpoints"
+               (willDismiss)="onModalDismiss(studentSlidingItem)"
                #addAbsenseModal
               >
                 <ng-template>
                   <ion-header>
                     <ion-toolbar>
                       <ion-buttons slot="start">
-                        <ion-button>
+                        <ion-button
+                         (click)="closeModal('absence-'+student.id)"
+                        >
                           Cancelar
                         </ion-button>
                       </ion-buttons>
@@ -74,27 +77,67 @@
                       <ion-buttons slot="end">
                         <ion-button
                          [strong]="true"
+                         (click)="onAddAbsence(student)"
                         >
                           Agregar
                         </ion-button>
                       </ion-buttons>
                     </ion-toolbar>
                   </ion-header>
+                  <ion-content class="ion-padding" color="light">
+                    <form>
+                      <ion-list-header>
+                        {{ student.nombreCompleto }}
+                      </ion-list-header>
+                      <ion-list [inset]="true">
+
+                        <ion-item>
+                          <p>Elige la fecha:</p>
+                        </ion-item>
+                        <ion-item class="ion-padding">
+                          <ion-datetime-button
+                           class="date-button__color--primary"
+                           datetime="datetime"
+                          >
+                          </ion-datetime-button>
+                          <ion-modal [keepContentsMounted]="true">
+                            <ng-template>
+                              <ion-datetime
+                               cancel-text="Cancelar"
+                               done-text="Seleccionar"
+                               id="datetime"
+                               locale="es-ES"
+                               presentation="date"
+                               [formatOptions]="dateFormatOptions"
+                               [isDateEnabled]="isWeekday"
+                               [showDefaultButtons]="true"
+                               (ionChange)="onSelectedDate($event)"
+                               #datetimePicker
+                              ></ion-datetime>
+                            </ng-template>
+                          </ion-modal>
+                        </ion-item>
+                      </ion-list>
+                    </form>
+                  </ion-content>
                 </ng-template>
               </ion-modal>
 
               <!-- Modal (Incumplimiento de tareas) -->
               <ion-modal
-               trigger="homework-{{ student.id }}"
+               trigger="noncompliance-{{ student.id }}"
                [initialBreakpoint]="initialBreakpoint"
                [breakpoints]="breakpoints"
-               #addHomeworkModal
+               (willDismiss)="onModalDismiss(studentSlidingItem)"
+               #addNoncomplianceModal
               >
                 <ng-template>
                   <ion-header>
                     <ion-toolbar>
                       <ion-buttons slot="start">
-                        <ion-button>
+                        <ion-button
+                         (click)="closeModal('noncompliance-'+student.id)"
+                        >
                           Cancelar
                         </ion-button>
                       </ion-buttons>
@@ -102,6 +145,7 @@
                       <ion-buttons slot="end">
                         <ion-button
                          [strong]="true"
+                         (click)="onAddNoncompliance(student)"
                         >
                           Agregar
                         </ion-button>
@@ -116,13 +160,16 @@
                trigger="misconduct-{{ student.id }}"
                [initialBreakpoint]="initialBreakpoint"
                [breakpoints]="breakpoints"
+               (willDismiss)="onModalDismiss(studentSlidingItem)"
                #addMisconductModal
               >
                 <ng-template>
                   <ion-header>
                     <ion-toolbar>
                       <ion-buttons slot="start">
-                        <ion-button>
+                        <ion-button
+                         (click)="closeModal('misconduct-'+student.id)"
+                        >
                           Cancelar
                         </ion-button>
                       </ion-buttons>
@@ -130,6 +177,7 @@
                       <ion-buttons slot="end">
                         <ion-button
                          [strong]="true"
+                         (click)="onAddMisconduct(student)"
                         >
                           Agregar
                         </ion-button>
@@ -146,18 +194,3 @@
   </ion-accordion-group>
 </ion-content>
 
-
-
-<!--
-  <ion-accordion value="1A" toggleIconSlot="start">
-    <ion-item slot="header" color="light">
-      <ion-label>Grupo 1° "A"</ion-label>
-      <ion-button shape="round" (click)="onAddStudent($event)">
-        <ion-icon slot="icon-only" name="person-add"></ion-icon>
-      </ion-button>
-    </ion-item>
-    <div class="ion-padding" slot="content">
-      No hay alumnos en este grupo.
-    </div>
-  </ion-accordion>
--->
