--- a/src/app/teacher/tab-notifications/tab-notifications.component.scss
+++ b/src/app/teacher/tab-notifications/tab-notifications.component.scss
@@ -7,3 +7,17 @@ ion-label p {
   text-align: center;
   padding: 1rem;
 }
+
+ion-note {
+  margin-left: 1rem;
+}
+
+.date-button__color--primary {
+  --background: var(--ion-color-primary);
+  --color: var(--ion-color-primary-contrast);
+}
+
+.date-button__color--primary::part(native) {
+  background: var(--ion-color-primary);
+  color: var(--ion-color-primary-contrast);
+}
